--- a/Game/templates/home.html
+++ b/Game/templates/home.html
@@ -82,7 +82,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Slot Games</h1>
+        <h1>Slot Games1</h1>
         <ol class="game-list">
             {% for game in page_obj.object_list %}
             <li class="game-item">
